Release Notes
=============
==== Jena 2.5.8

==== Jena 2.5.7

Database layer:
   o Compatibility fixes for PostgreSQL 8.3 (no schema changes)  
   o Compatibility fixes for MS SQL Server 2008 (no schema changes)

ReasonerFactoryAssembler
    o Now takes note of ja:schema properties & binds such a schema
      to the reasoners that the factory produces.

Reasoners:
    o Modified @include processing and Rule.rulesFromURL to support 
      FileManager redirects.
    o Fixed problem withLPTopGoalIterator which caused one extra level
      of lookahead in some circumstances.
    
==== Jena 2.5.6 

Typed literals:
    o Fixed bug in retrieval of decimal values with trailing fractional
      zeros by canonicalizing values after parsing and improving
      canonicalization.
      
==== Jena 2.5.5

Jar changes:
    o lucene-core has been upgraded from lucene-core-2.0.0 to lucene-2.2.0.jar.
    o logging-commons-1.1.jar upgraded to logging-commons-1.1.1.jar 

Deprecated Method Removal Frenzy
    o A bunch of methods in Resource, Model, ModelCon, and Statement have
      for a while now been marked as deprecated. These methods took literal
      values for the object of a statement and used the old treat-it-as-a-string
      approach rather than the newer typed-literal approach.

    o These deprecated methods have been removed. However, to allow migrators
      an easier life and to avoid requiring many many calls of
      createTypedLiteral (which needs a model, not always conveniently to hand),
      typed-literal versions of these methods have been added to the interfaces.

    o Model has grown:

      * addLiteral( Resource, Property, Various )
      * listResourcesWithProperty( Property, Various )
      * createLiteralStatement( Resource, Property, Various )
      * listLiteralStatements( Resource, Property, Various )
      * listResourcesWithProperty( Property, Various )

    o Resource has grown:

      * addLiteral( Property, Various )